--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "22.10.2",
+    "prisma": "6.0.1",
     "tsup": "8.3.5",
     "tsx": "4.19.2",
     "typescript": "5.7.2"
   },
   "dependencies": {
+    "@prisma/client": "6.0.1",
     "dotenv": "16.4.7",
     "fastify": "5.2.0",
     "zod": "3.24.1"
