--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.10.2",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "2.1.8",
     "prisma": "6.0.1",
+    "supertest": "7.0.0",
     "tsup": "8.3.5",
     "tsx": "4.19.2",
     "typescript": "5.7.2",
