--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vitest": "2.1.8"
   },
   "dependencies": {
+    "@fastify/cookie": "11.0.1",
     "@fastify/jwt": "9.0.2",
     "@prisma/client": "6.0.1",
     "bcryptjs": "2.4.3",
